--- a/package.json
+++ b/package.json
@@ -5,7 +5,100 @@
   "author": "George Bockari <bitwhys@gmail.com>",
   "main": "index.js",
   "license": "MIT",
+  "electronWebpack": {
+    "staticSourceDirectory": "src/renderer/template/dist",
+    "main": {
+      "webpackConfig": "webpack.main.js"
+    },
+    "renderer": {
+      "template": "src/renderer/index.html",
+      "webpackConfig": "webpack.renderer.js"
+    }
+  },
+  "build": {
+    "appId": "com.bitwhys.lavar",
+    "copyright": "Copyright © 2019-present Bit Creative",
+    "afterAllArtifactBuild": "scripts/build/hook_after_build.js",
+    "afterPack": "scripts/build/hook_after_pack.js",
+    "directories": {
+      "output": "releases"
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "pkg",
+        "zip"
+      ],
+      "category": "public.app-category.utilities",
+      "icon": "resources/icon/icon.png",
+      "type": "distribution"
+    },
+    "dmg": {
+      "background": "resources/dmg_background/background.png",
+      "iconSize": 160,
+      "iconTextSize": 12,
+      "window": {
+        "width": 660,
+        "height": 400
+      },
+      "contents": [
+        {
+          "x": 180,
+          "y": 170,
+          "type": "file"
+        },
+        {
+          "x": 480,
+          "y": 170,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "pkg": {
+      "license": "LICENSE"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable",
+        "zip"
+      ],
+      "icon": "resources/icon/icon.ico"
+    },
+    "nsis": {
+      "installerIcon": "resources/icon/icon.ico",
+      "license": "LICENSE",
+      "warningsAsErrors": false
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm",
+        "snap"
+      ],
+      "icon": "resources/icon",
+      "category": "Utility"
+    },
+    "snap": {
+      "grade": "stable",
+      "summary": "The markdown-based note-taking app that doesn't suck."
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "notable",
+      "releaseType": "release",
+      "publishAutoUpdate": true
+    }
+  },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "@hot-loader/react-dom": "^16.8.6",
+    "@types/electron-devtools-installer": "^2.2.0",
+    "@types/node": "^12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "electron": "^5.0.7",
     "electron-builder": "^21.1.0",
     "electron-builder-squirrel-windows": "^21.1.0",
@@ -25,5 +118,8 @@
     "antd": "^3.20.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.0.7"
   }
 }
